<resources>
    <string name="app_name">ListaCompraApp</string>

    <string name="img_login">Logo do Aplicativo</string>
    <string name="email">Email@gmail.com</string>
    <string name="senha">Senha</string>
    <string name="acessar">Acessar</string>
    <string name="addConta">Criar Conta</string>
    <string name="nome">Seu nome</string>

    <string name="confSenha">Confirmar Senha</string>

    <string name="buscar">Buscar</string>
    <string name="logout">Sair</string>
    <string name="imgMain">Imagem da Lista</string>
    <string name="addList">Adicionar nova lista de compras</string>

    <string name="listName">Nome da Lista</string>
    <string name="addImgList">Adicionar mídia do dispositivo</string>

    <string-array name="unidades">
        <item>un</item>
        <item>kg</item>
        <item>g</item>
        <item>L</item>
    </string-array>

    <string-array name="categorias">
        <item>Frutas/Verduras</item>
        <item>Proteína</item>
        <item>Outros</item>
    </string-array>
</resources>