<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddListaActivity">

    <TextView
        android:id="@+id/tv_titulo_add_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adicionar Lista"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nome_nova_lista"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/listName"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_add_lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_nome_nova_lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_add_lista"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:background="#E0E0E0"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_img_foreground"
        app:layout_constraintTop_toBottomOf="@id/til_nome_nova_lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imgMain"/>

    <ImageButton
        android:id="@+id/btn_add_img"
        android:src="@drawable/ic_add_img"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_add_lista"
        app:layout_constraintEnd_toEndOf="@id/iv_add_lista"
        android:contentDescription="@string/addImgList"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_lista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Adicionar"
        app:layout_constraintTop_toBottomOf="@id/iv_add_lista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>